[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
authors = ["Brandon Shea <bsshea5@gmail.com>"]
description = "A tool to search files"
readme = "README.md"
repository = "https://github.com/bshea5/grrs"
homepage = "https://github.com/bshea5/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"